--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,6 +65,7 @@ dependencies {
     annotationProcessor 'org.parceler:parceler:1.1.12'
     //picasso
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.firebase:firebase-storage:9.2.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
