--- a/employees/src/main/AndroidManifest.xml
+++ b/employees/src/main/AndroidManifest.xml
@@ -9,14 +9,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".LoginActivity"></activity>
-        <activity android:name=".CreateAccountActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".CreateAccountActivity"></activity>
+
+
+        <!--<activity android:name=".AddEmployeeActivity" >-->
+
+        <!--<activity android:name=".ui.EmployeeDetailActivity" />-->
+
+        <activity android:name=".LoginActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity android:name=".MainActivity">
+
         </activity>
     </application>
 
