--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         </activity>
         <activity android:name=".ui.EmployeeDetailActivity" />
 
-        <activity android:name=".ui.LoginActivity" >
+        <activity android:name=".ui.LoginActivity"
+            >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
