--- a/employees/build.gradle
+++ b/employees/build.gradle
@@ -62,6 +62,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:17.0.0'
     implementation 'com.google.firebase:firebase-auth:17.0.0'
     implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+    implementation 'com.google.firebase:firebase-firestore:21.0.0'
     //glide
     implementation("com.github.bumptech.glide:glide:4.7.1") {
         exclude group: "com.android.support"
